force-app/main/default/objects/Audit_Trail__c/Audit_Trail__c.object-meta.xml
<CustomObject>
    <description>The system shall store records mirrored from Salesforce Setup Audit Trail, enriched with
compliance metadata.</description>
    <label>Audit Trail</label>
    <nameField>
        <displayFormat>AUDIT-{00000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>