force-app/main/default/objects/Audit_Trail__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The specific action performed (e.g., &apos;Created Apex Class&apos;).</description>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>