force-app/main/default/objects/Audit_Trail__c/fields/Action_Score__c.field-meta.xml
<CustomField>
    <fullName>Action_Score__c</fullName>
    <description>Health score for this action (0–100). Higher = healthier/safer</description>
    <label>Action Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>