force-app/main/default/objects/Audit_Trail__c/fields/Deployment_User_Log__c.field-meta.xml
<CustomField>
    <fullName>Deployment_User_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployment User Log?</label>
    <type>Checkbox</type>
</CustomField>