force-app/main/default/objects/Audit_Trail__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>It is synced with the Display field of the standard SetupAuditTrail object.</description>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>