force-app/main/default/objects/Audit_Trail__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>