force-app/main/default/objects/Audit_Trail__c/fields/Forwarded_For_IP__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_For_IP__c</fullName>
    <label>Forwarded For IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>