force-app/main/default/objects/Audit_Trail__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IPv4 or IPv6 address of the session.</description>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>