force-app/main/default/objects/Audit_Trail__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Filled by responsible user when resolving the case</description>
    <label>Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>