force-app/main/default/objects/Audit_Trail__c/fields/Log_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Created_Date__c</fullName>
    <description>DateTime. Timestamp from Salesforce
Setup Audit Trail.</description>
    <label>Log Created Date</label>
    <type>DateTime</type>
</CustomField>