force-app/main/default/objects/Audit_Trail__c/fields/Matched_Deployment_Window__c.field-meta.xml
<CustomField>
    <fullName>Matched_Deployment_Window__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Change_Window__c. Window active at time of change.</description>
    <label>Matched Deployment Window</label>
    <referenceTo>Deployment_Window__c</referenceTo>
    <relationshipLabel>Audit Trails (Deployment Window)</relationshipLabel>
    <relationshipName>Audit_Trails1</relationshipName>
    <type>Lookup</type>
</CustomField>