force-app/main/default/objects/Audit_Trail__c/fields/Non_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE by scheduled job when violation is detected.</description>
    <label>Non-Compliant</label>
    <type>Checkbox</type>
</CustomField>