force-app/main/default/objects/Audit_Trail__c/fields/Raw_Audit_Entry__c.field-meta.xml
<CustomField>
    <fullName>Raw_Audit_Entry__c</fullName>
    <description>JSON snapshot of the original audit trail row.</description>
    <label>Raw Audit Entry</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>