force-app/main/default/objects/Audit_Trail__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case. Populated when a case is auto-created.</description>
    <inlineHelpText>Lookup to Case. Populated when a case is auto-created.</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Audit Trails</relationshipLabel>
    <relationshipName>Audit_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>