force-app/main/default/objects/Audit_Trail__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will determine whether Audit Trail is reviewed</description>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>