force-app/main/default/objects/Audit_Trail__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to user to determine who reviewed the Audit Trail</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Trails1</relationshipName>
    <type>Lookup</type>
</CustomField>