force-app/main/default/objects/Audit_Trail__c/fields/Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Score_Weight__c</fullName>
    <description>How much this action type influences the org score</description>
    <label>Score Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>