force-app/main/default/objects/Audit_Trail__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Audit Trail section (e.g., &apos;Apex Classes&apos;, &apos;Flows&apos;).</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>