force-app/main/default/objects/Audit_Trail__c/fields/User_Location_City__c.field-meta.xml
<CustomField>
    <fullName>User_Location_City__c</fullName>
    <description>City derived from login geolocation.</description>
    <label>User Location — City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>