force-app/main/default/objects/Audit_Trail__c/fields/User_Location_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Location_Country__c</fullName>
    <description>Country derived from login geolocation.</description>
    <label>User Location — Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>