force-app/main/default/objects/Audit_Trail__c/fields/User_Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Location_Postal_Code__c</fullName>
    <label>User Location — Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>