force-app/main/default/objects/Audit_Trail__c/fields/Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score__c</fullName>
    <description>Action Score × Weight — used in org score calculation</description>
    <label>Weighted Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>