force-app/main/default/objects/Audit_Trail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Log_Created_Date__c</columns>
    <columns>Non_Compliant__c</columns>
    <columns>Matched_Component__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>