force-app/main/default/objects/Audit_Trail__c/listViews/Open_Non_Compliance_Records.listView-meta.xml
<ListView>
    <fullName>Open_Non_Compliance_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Non_Compliant__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Justified  Non-Compliance Records</label>
</ListView>