force-app/main/default/objects/Audit_Trail__c/listViews/Un_Justified_Non_Compliant_Records.listView-meta.xml
<ListView>
    <fullName>Un_Justified_Non_Compliant_Records</fullName>
    <columns>NAME</columns>
    <columns>Changed_By_User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Justification__c</columns>
    <filterScope>Mine</filterScope>
    <label>Un-Justified Non-Compliant Records</label>
</ListView>